src/objects/Admission__c.object
<CustomObject>
    <fields>
        <fullName>Subscriber_Employer__c</fullName>
        <formula>VOB__r.Subscriber_Employer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked this will not count as an admit on certain reports.</inlineHelpText>
        <label>Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnUsed_Auth_Days_LOC__c</fullName>
        <label>UnUsed Auth Days LOC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>Res</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unused_Auth_Days__c</fullName>
        <label>Unused Auth Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VOB</label>
        <referenceTo>Insurance_Verification__c</referenceTo>
        <relationshipLabel>Admissions</relationshipLabel>
        <relationshipName>Admissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VerifyTX_Insurer_del__c</fullName>
        <formula>IF (or( contains( Insurance__c , &quot;BC&quot;), contains ( Insurance__c , &quot;BCBS&quot;) , contains ( Insurance__c, &quot;bcbs&quot;) , contains ( Insurance__c , &quot;Blue&quot;),contains ( Insurance__c , &quot;blue&quot;),contains ( Insurance__c , &quot;Anthem&quot;),contains ( Insurance__c , &quot;ANTHEM&quot;),contains ( Insurance__c , &quot;bc&quot;) , (Insurance__c = &quot;Empire&quot;) , (Insurance__c = &quot;EMPIRE&quot;) ,contains ( Insurance__c , &quot;Independence&quot;) ,contains (Insurance__c, &quot;INDEPENDENCE&quot;) ,contains ( Insurance__c , &quot;Carefirst&quot;),contains( Insurance__c , &quot;Horizon&quot;),contains( Insurance__c , &quot;HORIZON&quot;),contains( Insurance__c , &quot;Keystone&quot;),contains( Insurance__c , &quot;KEYSTONE&quot;), contains( Insurance__c , &quot;Highmark&quot;),contains (Insurance__c , &quot;Premera&quot;), contains( Insurance__c , &quot;CAREFIRST&quot;), contains( Insurance__c , &quot;HIGHMARK&quot;), contains ( Insurance__c , &quot;PREMERA&quot;), contains (Insurance__c, &quot;IBC&quot;),contains( Insurance__c , &quot;REGENCE&quot;), contains( Insurance__c , &quot;Regence&quot;), contains ( Insurance__c , &quot;WELLMARK&quot;), contains ( Insurance__c , &quot;Wellmark&quot;), contains ( Insurance__c , &quot;BS of California&quot;)), &quot;BLUE CROSS BLUE SHIED&quot;, IF (or (contains(Insurance__c , &quot;UHC&quot;), contains (Insurance__c , &quot;UBH&quot;), contains (Insurance__c , &quot;United Health Care&quot;), contains (Insurance__c, &quot;united health care&quot;), contains (Insurance__c,&quot;United Healthcare&quot;), contains (Insurance__c, &quot;UHC/Optum&quot;), contains(Insurance__c , &quot;uhc&quot;)),&quot;UnitedHealthCare&quot;, IF (or (contains (Insurance__c ,&quot;UPMC&quot;), contains (Insurance__c ,&quot;upmc&quot;)), &quot;UPMC HEALTH PLAN (TRISTATE)&quot;, IF (or (contains(Insurance__c ,&quot;GEHA&quot;), CONTAINS (Insurance__c, &quot;geha&quot;)), &quot;GOVERNENT EMPLOYEES HEALTH ASSOCIATION (GEHA)&quot;,IF (or (contains(Insurance__c ,&quot;Tricare&quot;), contains (Insurance__c,&quot;Tri-care&quot;), contains (Insurance__c, &quot;TriCare&quot;),contains (Insurance__c, &quot;TRICARE&quot;)), &quot;TRICARE EAST&quot;, IF (or (contains(Insurance__c ,&quot;Medica/UHC&quot;), (Insurance__c= &quot;medica&quot;)), &quot;MEDICA&quot;, IF (or (contains(Insurance__c ,&quot;Core Source&quot;), contains (Insurance__c, &quot;CORE SOURCE&quot;)), &quot;CORESOURCE (MD PA &amp; IL)&quot;, If (contains (Insurance__c,&quot;GHI&quot;), &quot;GHI&quot;, if (or (contains(Insurance__c, &quot;/Beacon&quot;), contains (Insurance__c, &quot;Empire Plan&quot;)), &quot;Beacon Health Options&quot;, Insurance__c )))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VerifyTX Insurer</label>
        <type>Text</type>
    </fields>
    <label>Admission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Admit_Date__c</columns>
        <columns>Discharge_Date__c</columns>
        <columns>Referred_By__c</columns>
        <columns>CTM_Source__c</columns>
        <columns>Patient_Source__c</columns>
        <columns>Payment_Source__c</columns>
        <columns>Insurance__c</columns>
        <columns>Member_ID__c</columns>
        <columns>VOB__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CCR_Admits</fullName>
        <columns>NAME</columns>
        <columns>Admit_Date__c</columns>
        <columns>Facility__c</columns>
        <columns>Insurance__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Patient_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>CCR</value>
        </filters>
        <label>CCR Admits</label>
    </listViews>
    <listViews>
        <fullName>ICFR_Admits</fullName>
        <columns>NAME</columns>
        <columns>Admit_Date__c</columns>
        <columns>Facility__c</columns>
        <columns>Insurance__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Patient_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>ICFR</value>
        </filters>
        <label>ICFR Admits</label>
    </listViews>
    <listViews>
        <fullName>TRT_Admits</fullName>
        <columns>NAME</columns>
        <columns>Admit_Date__c</columns>
        <columns>Facility__c</columns>
        <columns>Insurance__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Patient_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Facility__c</field>
            <operation>equals</operation>
            <value>,TRT,Embrace</value>
        </filters>
        <label>TRT Admits</label>
    </listViews>
    <nameField>
        <label>Admission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>